Blocking Queue and AutoCloseable

--- a/Spring/JPA/demo/src/main/resources/application.properties
+++ b/Spring/JPA/demo/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:h2:mem:harish
 spring.jpa.defer-datasource-initialization=true
 server.port = 9090
 spring.application.name = adminserver
+management.endpoints.web.exposure.include= *
