--- a/JPA2/src/main/resources/application.properties
+++ b/JPA2/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:harish
 spring.jpa.defer-datasource-initialization=true
+spring.security.user.name=Harish
+spring.security.user.password=pass
